deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hextris
  labels:
    app: hextris
  name: hextris
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hextris
  template:
    metadata:
      labels:
        app: hextris
    spec:
      containers:
      - image: beltus325/hextris:latest
        name: hextris
        resources: 
          requests:
            memory: "500Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"


---

apiVersion: v1
kind: Service
metadata:
  namespace: hextris
  labels:
    app: hextris
  name: hextris-service
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: hextris



---

# apiVersion: networking.k8s.io/v1
# kind: IngressClass
# metadata:
#   namespace: hextris
#   labels:
#     app.kubernetes.io/component: controller
#   name: ingress-class-hextris
#   annotations:
#     ingressclass.kubernetes.io/is-default-class: "true"
# spec:
#   controller: k8s.io/ingress-nginx
# ---
# apiVersion: networking.k8s.io/v1
# kind: IngressClass
# metadata:
#   namespace: hextris  
#   annotations:
#     kubectl.kubernetes.io/last-applied-configuration: |
#       {"apiVersion":"networking.k8s.io/v1","kind":"IngressClass","metadata":{"annotations":{},"labels":{"app.kubernetes.io/component":"controller","app.kubernetes.io/instance":"ingress-nginx","app.kubernetes.io/name":"ingress-nginx","app.kubernetes.io/part-of":"ingress-nginx","app.kubernetes.io/version":"1.11.3"},"name":"nginx"},"spec":{"controller":"k8s.io/ingress-nginx"}}
#   creationTimestamp: "2025-08-08T20:18:31Z"
#   generation: 1
#   labels:
#     app.kubernetes.io/component: controller
#     app.kubernetes.io/instance: ingress-nginx
#     app.kubernetes.io/name: ingress-nginx
#     app.kubernetes.io/part-of: ingress-nginx
#     app.kubernetes.io/version: 1.11.3
#   name: nginx
# spec:
#   controller: k8s.io/ingress-nginx

# ---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:  
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  namespace: hextris
  name: hextris
spec:
  ingressClassName: nginx
  rules:
  - host: hextris.rgfdevops.cloud
    http:
      paths:
      - backend:
          service: 
            name: hextris-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - hextris.rgfdevops.cloud
    secretName: hextris-api-tls-secret
# ---

# apiVersion: extensions/v1beta1
# kind: Deployment
# metadata:
#   namespace: hextris
#   name: nginx-ingress-controller
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: nginx-ingress
#   template:
#     metadata:
#       labels:
#         app: nginx-ingress
#     spec:
#       containers:
#       - image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.21.0
#         name: nginx-ingress-controller
#       args:
#       - /nginx-ingress-controller
#       - -- configmap=$(POD_NAMESPACE)/nginx-configuration

# ---

# apiVersion: v1
# kind: configmap
# metadata:
#     namespace: hextris
#     name: nginx-controller
